assets/css/style.css
* {
	margin: 0;
	padding: 0;
	outline: 0;
}

body {
	background: #000911 url(../images/content-bg.png) center 290px no-repeat;
	color: white;
	font-family: Arial, sans-serif;
	line-height: 16px;
}

img {
	border: 0;
}

#header {
	width: 100%;
	background: url(../images/back.png) center top no-repeat;
	height: 327px;
	position: relative;
}

#header ul {
	position: absolute;
	list-style: none;
	display: block;
	background: url(../images/navigation.png) no-repeat;
	width: 914px;
	height: 89px;
	left: 50%;
	margin-left: -457px;
	top: 14px;
	padding: 22px 32px 0 32px;
}

/* buttons */
#header ul li > a, #header ul li.dropdown span {
	display: block;
	font-family: Arial, sans-serif;
	text-shadow: 1px 1px 0 black;
	line-height: 36px;
	font-size: 13px;
	text-transform: uppercase;
	text-decoration: none;
	font-weight: normal;
	color: white;
	height: 37px;
	padding: 0 5px;
	float: left;
}

#header ul li {
	float: left;
	padding-left: 9px;
	padding-right: 9px;
}

#header ul li:hover > a {
	background: url(../images/topmenu-mid.png) repeat-x;
}

#header ul li.dropdown > div {
	display: none;
}

#header ul li.dropdown:hover > span {
	background: url(../images/topmenu-dropdown-mid.png) repeat-x;
}

/* button corners (normal button) */
#header ul li:hover {
	background: url(../images/topmenu-left.png) left top no-repeat;
}

#header ul li:hover b {
	position: absolute;
	width: 9px;
	height: 37px;
	background: url(../images/topmenu-right.png) no-repeat;
}

/* button corners (dropdown button) */
#header ul li.dropdown:hover {
	background: url(../images/topmenu-dropdown-left.png) left top no-repeat;
}

#header ul li.dropdown:hover b {
	position: absolute;
	z-index: 10;
	width: 9px;
	height: 37px;
	background: url(../images/topmenu-dropdown-right.png) no-repeat;
}

/* button dropdown pane */
#header ul li.dropdown > div {
	display: none;
}

#header ul li.dropdown:hover > div {
	position: absolute;
	display: block;
	background: #020a17 url(../images/topmenu-dropdown-pane.png) left bottom repeat-x;
	height: 205px;
	width: 444px;
	min-width: 170px;
	margin-left: -8px;
	margin-top: 35px;
	
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
	font-size: 12px;
	color: white;
}

#header ul li.dropdown > div div {
	width: 38%;
	float: left;
	padding: 20px 25px;
}

#header ul li.dropdown > div h3 {
	font-size: 15px;
	font-family: "Trebuchet MS", sans-serif;
	font-weight: 300;
	line-height: 20px;
	margin-bottom: 14px;
	color: white;
}

#header ul li.dropdown > div a#account-erstellen {
	display: block;
	text-indent: -9999px;
	background: url(../images/account-erstellen.png) no-repeat;
	width: 177px;
	height: 61px;
}

#header ul li.dropdown > div a#account-erstellen:hover {
	background-image: url(../images/account-erstellen-hover.png);
}

/* button dropdown pane form */
#header ul li.dropdown input[type="text"], #header ul li.dropdown input[type="password"] {
	width: 176px;
	height: 27px;
	border: 0;
	background: url(../images/topmenu-dropdown-pane-input.png) no-repeat;
	vertical-align: middle;
	padding: 0 6px;
	font-family: Arial, sans-serif;
	font-size: 12px;
	margin-bottom: 7px;
	color: #0b0b0c;
	line-height: 26px;
}

#header ul li.dropdown input[type="text"]:focus, #header ul li.dropdown input[type="password"]:focus {
	background-image: url(../images/topmenu-dropdown-pane-input-hover.png);
	color: #dde6f7;
	text-shadow: 1px 1px 0 #222;
}

#header ul li.dropdown input[type="submit"] {
	border: 0;
	background: url(../images/anmelden.png) no-repeat;
	width: 107px;
	height: 24px;
	margin-top: 6px;
	cursor: pointer;
}

#header ul li.dropdown input[type="submit"]:focus, #header ul li.dropdown input[type="submit"]:hover {
	background-image: url(../images/anmelden-hover.png);
}

#header ul li.dropdown label {
	display: block;
	color: #bac0c8;
	font-weight: normal;
	text-indent: 4px;
	margin-bottom: 3px;
	font-size: 11px;
	text-transform: uppercase;
}

/* wrapper */
#wrapper {
	clear: both;
	min-height: 494px;
	width: 874px;
	margin: 0 auto;
	margin-top: -36px;
}

/* server status bar */
#wrapper #server-status {
	margin-top: 15px;
	background: transparent url(../images/serverstatus-bg.png) top left no-repeat;
	width: 836px;
	height: 40px;
	text-shadow: 1px 1px 0 #050505;
	padding: 0 19px;
}

#wrapper #server-status > div {
	line-height: 39px;
	font-size: 13px;
	height: 100%;
	position: absolute;
	width: 836px;
	height: 40px;
}

#wrapper #server-status h3 {
	display: block;
	float: left;
	font-size: 13px;
	font-weight: bold;
	line-height: 40px;
	text-transform: uppercase;
}

#wrapper #server-status small {
	display: block;
	float: left;
	font-size: 9px;
	line-height: 41px;
	margin-left: 6px;
}

/* content */
#content-container {
	float: left;
	width: 547px;
	margin-top: 17px;
	margin-bottom: 30px;
}

#content-container #title {
	height: 48px;
	width: 100%;
	background: url(../images/content-title.png) no-repeat;
}

#content-container #title h1 {
	font-weight: normal;
	font-size: 13px;
	text-shadow: 1px 1px 0 black;
	padding: 10px 0 0 16px;
	/*text-transform: uppercase;*/
}

#content-container #content {
	background: #0f171e;
	width: 547px - 12px - 13px;
	padding: 4px 12px 0 13px;
	font-size: 12px;
}

#content-container #foot {
	width: 100%;
	background: url(../images/content-foot.png) no-repeat;
	height: 15px;
}

/* teaser box */
#content-container #content #teaserbox {
	border: 1px solid #181f25;
	background: black;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	padding: 1px;
	height: 189px;
	width: 516px;
	margin-bottom: 20px;
}

#content-container #content ul#navigation {
	list-style: none;
	position: relative;
	margin-top: -30px;
	margin-right: 15px;
	float: right;
}

#content-container #content ul#navigation li {
	float: left;
	background: url(../images/teaserbox/navi-inactive.png) no-repeat;
	height: 14px;
	width: 14px;
	text-indent: -9999px;
	cursor: pointer;
}

#content-container #content ul#navigation li:hover {
	background: url(../images/teaserbox/navi-hover.png) no-repeat;
}

#content-container #content ul#navigation li.selected {
	background: url(../images/teaserbox/navi-active.png) no-repeat;
}

/* accordion */
.accordion-box { 
	width: 520px;
	margin: 14px 0;
	line-height: 16px;
}

.accordion-box h2 {
	display: block;
	float: left;
	background: url(../images/accordion-title.png) no-repeat;
	width: 520px;
	height: 30px;
	font-family: "Trebuchet MS", sans-serif;
	font-size: 12px;
	font-weight: normal;
	line-height: 29px;
	text-indent: 8px;
	cursor: pointer;
	padding-bottom: 1px;
	text-shadow: 1px 1px 0 black;
}

.accordion-box h2.active {
	padding-bottom: 0px;
}

.accordion-box > div {
	clear: both;
	width: 486px;
	padding: 15px 17px 25px 17px;
	background: #0b1118 url(../images/accordion-bg.png) top left repeat-x;
	border-bottom-left-radius: 4px;
	-moz-border-bottom-left-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	-moz-border-bottom-right-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;
}

#news h2 {
	background: url(../images/accordion-news-title.png) no-repeat;
}

#news h2:hover, #news h2.active {
	background: url(../images/accordion-news-title-hover.png) no-repeat;
}

#news h2 b {
	display: block;
	float: left;
	margin-top: 12px;
	margin-left: 10px;
	height: 6px;
	width: 6px;
	background: transparent url(../images/accordion-expand.png) center center;
}

#news h2.active b {
	background: transparent url(../images/accordion-collapse.png) center center;
}

#news h2 small {
	display: block;
	float: right;
	margin-right: 21px;
	color: #90c6e8;
	font-family: Arial, sans-serif;
	font-size: 10px;
	font-weight: bold;
}

#news div.replies {
	height: 26px;
	width: 244px;
	background: url(../images/news_replies.png) left top;
	margin-top: 15px;
	margin-bottom: -15px;
	margin-left: -9px;
	text-indent: 32px;
}

#news div.replies a {
	color: #75bae6;
	line-height: 26px;
	text-decoration: none;
}

#news div.replies a:hover {
	color: #c1e7ff;
}

/* sidebar */
#sidebar {
	float: right;
	margin-top: 17px;
	margin-bottom: 30px;
}

#sidebar .box {
	padding-bottom: 9px;
	background: url(../images/box-bottom.png) bottom no-repeat;
	width: 303px;
	margin-bottom: 15px;
}

#sidebar .box h3 {
	display: block;
	width: 100%;
	padding: 11px 0 17px 16px;
	background: url(../images/box-title.png) left top no-repeat;
	font-weight: normal;
	font-size: 13px;
	text-shadow: 1px 1px 0 black;
}

#sidebar .box .content {
	background: #0a0e12;
	padding: 8px 14px;
	font-size: 12px;
}

/* sidebar - tables */
#sidebar .box table {
	border-collapse: collapse;
	padding: 0;
	border: 1px solid #172b3d;
}

#sidebar .box table td {
	background: #0a121d;
	margin: 1px;
	padding: 5px;
}

#sidebar .box table td.alt {
	background: #080e17;
}

#sidebar .box table tr {
	margin: 0; padding: 0;
}

#sidebar .box table th {
	font-weight: bold;
	text-align: left;
	padding: 5px;
	background: #0e1925;
	text-shadow: 1px 1px 0 black;
}

/* sidebar collapsable tables */
#sidebar .box table.collapsable th {
	background: #0e1925 url(../images/accordion-collapse.png) 97% 45% no-repeat;
	cursor: pointer;
}

#sidebar .box table.collapsable.collapsed th {
	background: #0e1925 url(../images/accordion-expand.png) 97% 45% no-repeat;
}

#sidebar .box table.collapsable th:hover {
	background-color: #12212f;
}

#sidebar .box table.collapsable.collapsed td {
	display: none;
}

/* sidebar - calendar table */
#sidebar .box .calendar td {
	text-align: center;
}

#sidebar .box .calendar div {
	padding: 5px 0;
	background: #080e17;
	border: 1px solid #172b3d;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

#sidebar .box .calendar div.today {
	background: #0e1925;
	border-color: #3a587b;
}

#sidebar .box .calendar div.today a {
	font-weight: bold;
	color: white;
}

/* sidebar - links */
#sidebar .box a {
	text-decoration: none;
}

#sidebar .box a:hover {
	color: white;
}

#sidebar .box a.white {
	color: white;
	font-weight: bold;
}

#sidebar .box a.white:hover {
	text-decoration: underline;
}

/* footer */
#footer-container {
	clear: both;
	background: url(../images/footer-bg.png) top center no-repeat;
	width: 100%;
	padding-top: 69px;
	margin-bottom: 40px;
}

#footer-container #footer {
	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
	font-size: 11px;
	color: #334b5f;
	text-align: center;
}

/* general text styles */
ul {
	margin-left: 15px;
}

ol {
	margin-left: 18px;
}

a {
	text-decoration: underline;
	color: #4ea1cb;
}

a:hover {
	text-decoration: none;
}

a.button {
	display: inline-block;
	background: #0c1016 url(../images/button-bg.png) top left repeat-x;
	line-height: 12px;
	padding: 7px 10px;
	border: 1px solid #0c1318;
	color: #6f8fa3;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	text-decoration: none;
}

a.button:hover {
	background: none #141b23;
	text-shadow: 1px 1px 0 #0c1318;
	color: #93B4C9;
}

*::-moz-selection {
	color: white;
    background-color: #0b4374;
}
*::selection {
	color: white;
    background-color: #0b4374;
}

.bbcode.quote, .bbcode.code {
	display: block;
	padding: 6px;
	margin: 5px 0;
	background: #080C11;
	border: 1px solid #111b25;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

.bbcode.code {
	font-family: "Courier New", serif;
}

.bbcode small {
	display: block;
	font-size: 10px;
	margin-bottom: 5px;
	font-family: Arial, sans-serif;
}

/* tooltips */
.tooltip {
	position: absolute;
	background: white;
	color: black;
	font-size: 11px;
	padding: 5px;
	display: none;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	-moz-box-shadow: 0 0 5px black;
	-webkit-box-shadow: 0 0 5px black;
	box-shadow: 0 0 10px black;
}

